[package]
name = "ceetle"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Computional Tree Logic (CTL) Verifier"
readme = "README.md"
repository = "https://github.com/AzeezDa/ceetle"
keywords = ["logic", "testing", "automaton"]
categories = ["science", "mathematics", "algorithms", "logic"]

[badges]
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctl_proc_macro = { path = "ctl_proc_macro" }

