[package]
name = "ceetle"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Computional Tree Logic (CTL) Verifier"
readme = "../README.md"
repository = "https://github.com/AzeezDa/ceetle"
keywords = ["logic", "testing", "automaton"]
categories = ["science", "mathematics", "algorithms", "logic"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
ceetle_macros = "0.1.0"
