[package]
name = "ceetle_macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Procedural Macros for the ceetle Library"
readme = "README.md"
repository = "https://github.com/AzeezDa/ceetle"
keywords = ["logic", "testing", "automaton"]
categories = ["science", "mathematics", "algorithms", "logic"]

[lib]
name = "ceetle_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2.0.18", features = ["parsing"] }
quote = "1.0.28"
proc-macro2 = "1.0.59"