[package]
name = "ctl_proc_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ctl_proc_macro"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "*", features = ["parsing"] }
quote = "*"
proc-macro2 = "*"